--- a/src/styles/main.module.css
+++ b/src/styles/main.module.css
@@ -77,6 +77,7 @@ span, button { font-weight: 400; }
 
 .buttonsWrapper {	
 	text-align: center;
+	margin-top: 100px;
 	margin-bottom: 100px;
 }
 .buttonsWrapper h1 {
@@ -143,9 +144,7 @@ span, button { font-weight: 400; }
     flex-direction: row;
     width: 100%;
 		min-height: 40vh;    
-    max-width: none;    
-    margin-left: 20px;
-
+    max-width: none;
   }
   .services .service.rev {
     flex-flow: row-reverse;
@@ -163,9 +162,8 @@ span, button { font-weight: 400; }
     width: 50%;    
     margin-top: 0;
     margin-bottom: 0;
-		justify-content: center;		
-    padding-left: 20px;
-    padding-right: 20px;
+		justify-content: center;
+    padding: 0 20px;
   }   
   .services h1 {
     margin-bottom: auto;
@@ -190,6 +188,10 @@ span, button { font-weight: 400; }
 }
 
 @media only screen and (min-width: 1200px) {
+  .about {
+    max-width: 1523px;
+    width: 98%;
+  }
   .about span {
     display: inline-block;
     margin-top: 10px;
@@ -197,6 +199,11 @@ span, button { font-weight: 400; }
   }
   .about h1 br {
     display: block;
+  }
+  .buttonsWrapper {
+    max-width: 1523px;
+    width: 98%;
+    margin: 100px auto 100px auto;
   }
 }
 
@@ -206,7 +213,8 @@ span, button { font-weight: 400; }
   }
   .services {
     width: 100%;
-		padding: 20px;    
+    max-width: 1523px;
+    margin: 0 auto;
   }
   .services .service {
 		margin-top: auto;		
@@ -219,7 +227,7 @@ span, button { font-weight: 400; }
 	}
 	.services .service div {
 		justify-content: center;
-		padding: 0 20px;		
+		padding: 0 30px;
 	}
 
   .services h1 {
@@ -233,6 +241,11 @@ span, button { font-weight: 400; }
     display: inline-block;
     width: fit-content;    
   } 
+  .buttonsWrapper {
+    max-width: 1523px;
+    width: 98%;
+    margin: 100px auto 100px auto;
+  }
   .buttonsWrapper .buttons .quoteBtn {
 		font-size: 25px;
     margin: 20px;
@@ -244,9 +257,15 @@ span, button { font-weight: 400; }
     display: block;
   }
 	.services {    
-		padding: 75px;
+    max-width: 1523px;
+    margin: 0 auto;
 	}
 	.services .service div {		
-		padding: 0 75px;
-	}  
+		padding: 0 40px;
+	}
+  .buttonsWrapper {
+    max-width: 1523px;
+    width: 98%;
+    margin: 100px auto 100px auto;
+  }
 }
